test_suite5/ALAN/test_suite/alan-2022-examples/failing/002580_mutation.alan
source D87Ua begin x := array 51 false end
